--- a/assets/css/subway.css
+++ b/assets/css/subway.css
@@ -2,29 +2,14 @@
 @-ms-keyframes subway-ripple{0%,100%{opacity:0}0%{width:0;height:0;margin:0}33%{width:44%;height:44%;margin:-22% 0 0 -22%;opacity:1}100%{width:88%;height:88%;margin:-44% 0 0 -44%}}@-moz-keyframes subway-ripple{0%{width:0;height:0;opacity:0;margin:0}33%{width:44%;height:44%;margin:-22% 0 0 -22%;opacity:1}100%{width:88%;height:88%;margin:-44% 0 0 -44%;opacity:0}}@-webkit-keyframes subway-ripple{0%{width:0;height:0;opacity:0;margin:0}33%{width:44%;height:44%;margin:-22% 0 0 -22%;opacity:1}100%{width:88%;height:88%;margin:-44% 0 0 -44%;opacity:0}}@-o-keyframes subway-ripple{0%{width:0;height:0;opacity:0;margin:0}33%{width:44%;height:44%;margin:-22% 0 0 -22%;opacity:1}100%{width:88%;height:88%;margin:-44% 0 0 -44%;opacity:0}}@keyframes subway-ripple{0%{width:0;height:0;opacity:0;margin:0}33%{width:44%;height:44%;margin:-22% 0 0 -22%;opacity:1}100%{width:88%;height:88%;margin:-44% 0 0 -44%;opacity:0}}.subway-ripple-css{background:0 0;width:200px;height:200px;position:absolute;top:-103px;left:-75px}.subway-ripple-css div{position:absolute;top:50%;left:50%;margin:0;width:0;height:0;opacity:0;border-radius:50%;border-width:12px;border-style:solid;-ms-animation:subway-ripple 2s ease-out infinite;-moz-animation:subway-ripple 2s ease-out infinite;-webkit-animation:subway-ripple 2s ease-out infinite;-o-animation:subway-ripple 2s ease-out infinite;animation:subway-ripple 2s ease-out infinite}.subway-ripple-css div:nth-of-type(1){border-color:#4a4a4a}.subway-ripple-css div:nth-of-type(2){border-color:#191919;-ms-animation-delay:1s;-moz-animation-delay:1s;-webkit-animation-delay:1s;-o-animation-delay:1s;animation-delay:1s}
 /*Preloader End*/
 
-#subway-settings-form .description {
-  max-width: 700px;
-}
-
-#subway_preloader {
-  display: inline-block;
-  position: relative;
-}
-
-.subway-login-form__form .login-submit {
-  position: relative;
-  clear: both;
-}
-
-.login-remember {
-  float: left;
-}
-.login-remember label {
-  margin: 0;
-}
-.subway-login-lost-password {
-  float: right;
-}
+#subway-settings-form .description { max-width: 700px; }
+#subway_preloader { display: inline-block; position: relative; }
+.subway-login-form__form .login-submit { position: relative; clear: both; }
+.login-remember { float: left; }
+.login-remember label { margin: 0; }
+.subway-login-lost-password { float: right; }
+.subway-login-form { width: 350px; }
+.gglcptch_recaptcha { width: 303px; display: block; margin: 0 auto 30px;}
 .subway-login-sucessfull {
     background: #CDDC39;
     padding: 15px 15px 15px 15px;
@@ -33,12 +18,4 @@
     margin: 15px auto;
     max-width: 500px;
     display: block;
-}
-.gglcptch_recaptcha {
-    width: 303px;
-    display: block;
-    margin: 0 auto 30px;
-}
-.subway-login-form {
-  width: 350px;  
 }
