--- a/assets/css/subway.css
+++ b/assets/css/subway.css
@@ -29,10 +29,11 @@
 
 .widget-subway-no-access-message,
 .subway-restricted-area{
-    background: #e2e2e2;
-    border: 1px solid #c5c5c5;
-    color: #444;
-    padding: 5px 15px;
+    background: #eee;
+    border: 1px solid #ddd;
+    color: #555;
+    padding: 5px 10px;
+    margin: 1em 0;
 }
 
 .widget-subway-no-access-message p:last-child,
