added date archive

--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -48,7 +48,7 @@ select#subway_redirect_page_id {
 
 label.subway-archive-roles {
     background: #fff;
-    margin: 0 10px 0 0;
+    margin: 5px 10px 5px 0;
     padding: 5px 10px;
     display: inline-block;
     box-shadow: 5px 5px 0px -1px #b3b3b3;
